# simple_nlp_with_docker

./: .gitignore  Dockerfile  README.md  docker_compose.yaml  main.py  pyproject.toml  requirements.txt
utils/: lifecycle_manager.py  text_processing.py  traditional_ml.py
