[tool.poetry]
name = "intelichain_project"
version = "0.1.0"
description = "Project for intelichain"
authors = ["Danylo <daniltomashi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.1.8"
exceptiongroup = "1.2.2"
fastapi = "0.115.11"
h11 = "0.14.0"
idna = "3.10"
joblib = "1.4.2"
numpy = "2.2.4"
pydantic = "2.10.6"
pydantic_core = "^2.27.2"
scikit-learn = "1.6.1"
scipy = "1.15.2"
sniffio = "1.3.1"
starlette = "0.46.1"
threadpoolctl = "3.6.0"
typing_extensions = "^4.12.2"
uvicorn = "0.34.0"
pandas = "2.2.3"
pydantic-core = "2.27.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.1"
six = "1.17.0"
typing-extensions = "4.12.2"
tzdata = "2025.1"
gunicorn = "23.0.0"
nltk = "3.9.1"
packaging = "24.2"
regex = "2024.11.6"
tqdm = "4.67.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
